fix(List Groups): align to right (set opacity for .close)

--- a/src/app/scss/_bootstrap-override.scss
+++ b/src/app/scss/_bootstrap-override.scss
@@ -1258,3 +1258,10 @@ pre {
 .badge {
   font-size: $font-size-sm;
 }
+
+//
+// Close
+// ----------------
+.close {
+  opacity: .2;
+}
